--- a/posts/Advanced Optimization/index.ipynb
+++ b/posts/Advanced Optimization/index.ipynb
@@ -27,6 +27,10 @@
     "\n",
     "## Abstract\n",
     "\n",
+    "[Link to Newton Optimizer code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/Advanced%20Optimization/newton_logistic.py).\n",
+    "\n",
+    "[Link to Adam Optimizer code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/Advanced%20Optimization/adam.py).\n",
+    "\n",
     "In this blog post, I explore advanced optimization techniques—Newton’s Method and the Adam optimizer—in the context of logistic regression applied to heart disease prediction. Through a series of experiments on a Kaggle heart dataset, I investigate the convergence behavior, sensitivity to learning rates, and efficiency of these methods. The three optimizers I work with are Newton's method, Adam, and gradient descent. The goal is to understand how different optimization algorithms influence model performance and training dynamics in a binary classification tasks."
    ]
   },
