--- a/posts/Pneumonia Detection/Final_Project_BP.ipynb
+++ b/posts/Pneumonia Detection/Final_Project_BP.ipynb
@@ -101,7 +101,21 @@
    "source": [
     "## Group Contributions:\n",
     "\n",
-    "Lia did the data preprocessing for the images and all visualizations such as the PCA plo. Furthermore, she made the the contrastive autoencoder, latent vectors, and worked on evaluation metrics for the models. For the blog posts she did the material and methods, results, and conclusions. Cameron worked on XGBoost Model in the project and wrote the introduction, abstract, and values statement of the blog post. Robsan worked on the Support Vector Machine. Emmanuel created the transformer and worked on model evaluation. Broadly adapted code imported from Google colab to be functional on the notebook. For the blog post, he added to the introduction and make did the reference implementation."
+    "Lia did the data preprocessing for the images and all visualizations such as the PCA plot. Furthermore, she made the the contrastive autoencoder, latent vectors, and worked on evaluation metrics for the models. For the blog posts she did the material and methods, results, and conclusions. Cameron worked on XGBoost Model in the project and wrote the introduction, abstract, and values statement of the blog post. Robsan worked on the Support Vector Machine. Emmanuel created the transformer and worked on model evaluation. Broadly adapted code imported from Google colab to be functional on the notebook. For the blog post, he added to the introduction and make did the reference implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30ca92a8",
+   "metadata": {},
+   "source": [
+    "## Personal Reflection:\n",
+    "\n",
+    "Throughout this process, I found myself engaging in quite a bit of research on models similar to mine. I also had to learn how to gather information from various sources to create a transformer tailored to my specific needs. My perspective on executing machine learning projects has shifted as well; I had never considered employing pipelining models or leveraging multiple models to generate predictions on a dataset.\n",
+    "\n",
+    "Overall, I take pride in this project. I believe the topic struck an excellent balance between being intriguing, challenging, and relevant. The fact that we were able to successfully implement it and achieve solid accuracy is incredibly rewarding.\n",
+    "\n",
+    "Additionally, I've enhanced my skills with GitHub and gained a better understanding of setting rules and branch protections, which will undoubtedly be valuable in the future. Moving forward, I plan to focus more on organizing pair programming sessions and fostering improved code review practices."
    ]
   },
   {
@@ -114,12 +128,6 @@
     "::: {#refs}\n",
     ":::"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48833fc4",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
