--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "title: Implementing the Perceptron Algorithm\n",
+    "author: Emmanuel Towner\n",
+    "date: '2025-03-31'\n",
+    "description: \"Blog Post 4\"\n",
+    "format: html\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
