--- a/posts/palmer/index.ipynb
+++ b/posts/palmer/index.ipynb
@@ -13,7 +13,7 @@
     "author: Emmanuel Towner\n",
     "date: '2025-02-12'\n",
     "image: \"penguins.jpg\"\n",
-    "description: \"Blog Post 1\"\n",
+    "description: \"In this blog post, I take the Palmer Penguins dataset and try to determine the best features to be used to determine the species of a penguin based on its measurements.\"\n",
     "format: html\n",
     "---"
    ]
