--- a/posts/audit/index.ipynb
+++ b/posts/audit/index.ipynb
@@ -12,7 +12,7 @@
     "title: Auditing Bias\n",
     "author: Emmanuel Towner\n",
     "date: '2025-03-12'\n",
-    "description: \"Blog Post 3\"\n",
+    "description: \"In this blog post, my goal was to make a prediction of employment status based on various demographics excluding race using a subset of data from the American Community Service focused on Massachusetts residents in 2023. After training a model on this data, I evaluated its performance and examined potential biases in its predictions.\"\n",
     "format: html\n",
     "---"
    ]
