--- a/posts/pneumonia/Final_Project_BP.ipynb
+++ b/posts/pneumonia/Final_Project_BP.ipynb
@@ -3,11 +3,15 @@
   {
    "cell_type": "raw",
    "id": "2cded8aa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: Pnuemonia Detection\n",
-    "\n",
+    "author: \"Lia Smith, Cameron Hudson, Robsan Dinka, Emmanuel Towner\"\n",
     "date: '2025-05-19'\n",
     "image: 'image.png'\n",
     "description: In this project, we built a convolutional neural network to embed chest X-ray images into a latent space, then compared three binary classifiers—Support Vector Machine, XGBoost, and Transformer—on their ability to detect pneumonia. Using contrastive learning and a variational autoencoder, we trained models on the Pneumonia Chest X-ray dataset from Kaggle. All models achieved around 78% accuracy, with high precision (up to 93%) but lower recall (as low as 37%). Our results highlight both the potential and limitations of non-CNN classifiers in medical image classification, particularly in contexts where false negatives carry high risk.\n",
