Revise palmer and draft others

--- a/posts/descent/index.ipynb
+++ b/posts/descent/index.ipynb
@@ -15,6 +15,7 @@
     "date: '2025-04-23'\n",
     "description: \"Blog Post 6\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
