--- a/posts/optimization/index.ipynb
+++ b/posts/optimization/index.ipynb
@@ -15,6 +15,7 @@
     "date: '2025-05-07'\n",
     "description: \"Blog Post 8\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
