--- a/posts/palmer/index.ipynb
+++ b/posts/palmer/index.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "## Abstract\n",
     "\n",
-    "In this blog post, I take the Palmer Penguins dataset and try to determine the best features to be used to determine the species of a penguin based on its measurements. Firstly, I create two figures and a table to analysize the relationships between features. Then I use sci-kit learns feature selection with chi-squared tests to pick 2 numerical features and 1 categorical feature. Then using those features, I train and test a logistic regression model. The model was fairly accurate but to understand the results better, I plot the decision regions and use a confusion matrix. "
+    "In this blog post, I take the Palmer Penguins dataset and try to determine the beIn this blog post, I analyze the Palmer Penguins dataset to identify the best features for determining penguin species based on their measurements. First, I create two figures and a table to explore the relationships between different features. Next, I utilize Scikit-learn's feature selection methods, employing chi-squared tests to select two numerical features and one categorical feature. With these features, I train and test a logistic regression model. The model demonstrates reasonable accuracy; however, to gain a better understanding of the results, I visualize the decision regions and present a confusion matrix.st features to be used to determine the species of a penguin based on its measurements. Firstly, I create two figures and a table to analysize the relationships between features. Then I use sci-kit learns feature selection with chi-squared tests to pick 2 numerical features and 1 categorical feature. Then using those features, I train and test a logistic regression model. The model was fairly accurate but to understand the results better, I plot the decision regions and use a confusion matrix. "
    ]
   },
   {
@@ -242,7 +242,7 @@
    "source": [
     "## Data Preparation\n",
     "\n",
-    "This is code from Professor Phil's website. It removes the columns that we don't use and NA values, converts the categorical feature columns into \"one-hot encoded\" 0-1 columns and saves the dataframe X_train. Also, \"Species\" is coded with the LabelEncoder and is saved as y_train."
+    "This code is from Professor Phil's website. It removes unused columns and NA values, converts categorical feature columns into \"one-hot encoded\" 0-1 columns, and saves the resulting DataFrame as X_train. Additionally, the \"Species\" column is encoded using LabelEncoder and stored as y_train."
    ]
   },
   {
@@ -458,7 +458,7 @@
    "source": [
     "### Figures\n",
     "\n",
-    "I created two graphs each 2 quantative columns and 1 qualitative columns. Plot 1 shows the relationship with the body mass and flipper length between different penguin species. Plot 2 shows the difference in Culmen Length and depth across different penguin species.\n"
+    "I created two graphs each two quantative columns and one qualitative columns. Plot 1 shows the relationship with the body mass and flipper length between different penguin species. Plot 2 shows the difference in Culmen Length and depth across different penguin species.\n"
    ]
   },
   {
@@ -507,9 +507,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Left side: Plot 1. The Gentoo penguins tend to be the biggest while Chinstrap and Adelie seem to have a great overlap in size. The Adelie seem to have slightly more variety in mass given a flipper length compared to Chinstrap. This is features seem decent for selection because there is some correlation between species and body size but they are not easily distinguishable by species.\n",
+    "Plot 1 (Left): This graph shows the relationship between body mass and flipper length among different penguin species. Gentoo penguins are the largest, while Chinstrap and Adelie penguins overlap considerably in size. Adelie penguins show slightly more variation in mass for a given flipper length compared to Chinstraps.\n",
     "\n",
-    "Right side: Plot 2. Based on the graph, the each specie of penguin seemed to have distinct beaks. The Adelie have greatest culmen depth but shortest length. The Gentoo have longer culmens but not as much depth and the Chinstrap lie in the middle with medium to large culmens. These are good features because there is a clear distinction in culmen sizes between species of penquins."
+    "Plot 2 (Right): This graph illustrates the differences in culmen length and depth among the species. Adelie penguins have the deepest but shortest culmen, Gentoo penguins have longer but less deep culmens, and Chinstraps are in between. These differences in beak size are significant for distinguishing penguin species."
    ]
   },
   {
@@ -655,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table 1: This table shows the biggest difference between penguins that had a full clutch and those that did not was the weight. Most of the penguins the produced two eggs weighed about 300 grams more. There is most likely not a causation but there a may be a correlation. Since clutch completion does not seem impact this data very much, it may not be a feature worth looking at."
+    "Table 1: This table shows that the most significant difference between penguins that had a full clutch and those that did not is their weight. Most of the penguins that produced two eggs weighed approximately 300 grams more. While there may be a correlation between clutch completion and weight, it is unlikely that there is a direct causation. Since clutch completion does not appear to impact this data significantly, it may not be a feature worth further investigation."
    ]
   },
   {
@@ -664,7 +664,7 @@
    "source": [
     "## Feature selection \n",
     "\n",
-    "Here I use sci-kits SelectKBest to pick the 3 feautures I'm going to use for my model. I had to seperate feature selection because all 3 selected features would be numerical. SelectKBest selects the k best features based on user specified scoring function. I used chi-squared since my feautres were meant for classification and they were non-negative.  "
+    "Here I used the SelectKBest function from the sci-kit-learn library to choose the three features that I will include in my model. I separated feature selection because all three selected features are numerical. SelectKBest identifies the k best features based on a user-specified scoring function. I chose the chi-squared scoring function, as my features are intended for classification and are non-negative "
    ]
   },
   {
@@ -741,7 +741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So despite the culmen sizes being appearing to be better features, based on the statistical tests the flipper length and body mass were better features. "
+    "Although the culmen sizes initially appeared to be better features, the statistical tests indicated that flipper length and body mass were, in fact, the more significant features."
    ]
   },
   {
@@ -946,7 +946,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at these decision plots, we see that our model is pretty successful determing of the difference between Gentoo and Adelie on the Biscoe and Torgersen islands. However, on the Dream island, there is a mixture of Gentoo and Chinstrap where the model the struggles to distinguish between the two. "
+    "Looking at the decision plots, we can see that our model is quite successful in distinguishing between Gentoo and Adelie penguins on the Biscoe and Torgersen islands. However, on Dream Island, where there is a mixture of Gentoo and Chinstrap penguins, the model struggles to differentiate between the two species."
    ]
   },
   {
@@ -994,9 +994,9 @@
    "source": [
     "## Discussion\n",
     "\n",
-    "The model had very similar training and testing accuracy of 0.89. This means the model is fairly solid at predicting penguins based on the flipper lenth, body mass and island. Based on the decision regions, the model struggled to correctly determine the difference between Chinstrap and Gentoo on the Island Dream. It seems that those 2 species are of similar sizes and therefore are hard to differentiate. \n",
+    "The model achieved a training accuracy of 0.89, which is the same as its testing accuracy. This indicates that the model is quite effective at predicting penguin species based on flipper length, body mass, and island. However, the decision regions suggest that the model had difficulty distinguishing between Chinstrap and Gentoo penguins on Dream Island. It appears that these two species have similar sizes, making them challenging to differentiate.\n",
     "\n",
-    "During this blog post, the two biggest things were I learned about different tools for feature selection and the need to normalize data before putting it in a model. In terms of feature selection, sci-kit learn provides various methods whether variance, statistical tests or recursion. I went with statistical test as it seemed more thorough then determining a random variance yet not as complex as the recursion. For normalizing data, I learned how to deal with a convergence error when trainig a model. Through some investigation I came to understand I recieved that error  because some of the features may not normally distributed. I used sci-kit recommended scaling function to standardize the data and everything was fine after that. Finally, I got more practice with modifing and selecting data from dataframes in general."
+    "In this blog post, the two main things I learned were the importance of feature selection and the need to normalize data before feeding it into a model. When it came to feature selection, I explored several methods offered by Scikit-learn, including variance thresholds, statistical tests, and recursive feature elimination. I chose statistical testing because it felt more thorough than relying on variance alone, yet not as complex as recursion.I also ran into a convergence error while training a model, which led me to learn about data normalization. After some investigating, I realized the error might be due to some features not being normally distributed. I used Scikit-learn’s recommended scaling function to standardize the data, and the model was trained without any further issues. Lastly, I got more comfortable working with DataFrames—especially when it came to selecting and modifying data."
    ]
   }
  ],
