--- a/about.qmd
+++ b/about.qmd
@@ -13,4 +13,4 @@ about:
 
 ---
 
-This is Emmanuel's blog
+Hello! I'm Emmanuel Towner, a computer science major at Middlebury College. This site shows work from my courses and solo projects. 
