--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -14,6 +14,7 @@
     "date: '2025-03-31'\n",
     "description: \"Blog Post 4\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
