--- a/posts/kernel/index.ipynb
+++ b/posts/kernel/index.ipynb
@@ -15,6 +15,7 @@
     "date: '2025-04-29'\n",
     "description: \"Blog Post 7\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
