--- a/posts/logistic/index.ipynb
+++ b/posts/logistic/index.ipynb
@@ -15,6 +15,7 @@
     "date: '2025-04-9'\n",
     "description: \"Blog Post 5\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
