--- a/posts/test/index.ipynb
+++ b/posts/test/index.ipynb
@@ -14,11 +14,37 @@
     "format: html\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16f94751",
+   "metadata": {},
+   "source": [
+    "## Heading\n",
+    "\n",
+    "Sum saslas asadsfdas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3bba69d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello, World!\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ml-0451",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
