Updated audit bias blog post

--- a/posts/audit/index.ipynb
+++ b/posts/audit/index.ipynb
@@ -14,7 +14,6 @@
     "date: '2025-03-12'\n",
     "description: \"In this blog post, my goal was to make a prediction of employment status based on various demographics excluding race using a subset of data from the American Community Service focused on Massachusetts residents in 2023. After training a model on this data, I evaluated its performance and examined potential biases in its predictions.\"\n",
     "format: html\n",
-    "draft: true\n",
     "---"
    ]
   },
@@ -839,7 +838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The number of indiviuals in this df are"
+    "1. The number of indiviuals in this dataframe are:"
    ]
   },
   {
@@ -863,7 +862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. The proportion of employed individuals are "
+    "2. The proportion of employed individuals are:"
    ]
   },
   {
@@ -890,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. The population of each group"
+    "3. The population of each group is:"
    ]
   },
   {
@@ -1155,7 +1154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this we see intersectionality between employment based on the sex of the person or whether they have a disability. As we can see in both graphs generally male and able bodied people are more likely to be employed. Multiple factors can contribute to this desparity. One is that women and people with disabilities are discriminated against by employers. Another is also considering how many of them are applying for jobs. For women, even with more of them joining the workforce, they may be more likely to doing childcare at home. Because disabilites is such a broad it's hard which may be capable of working and those that aren't. This probably a big factor why relatively few are employed. Something I noticed is that for Black Americans, Native Americans and SPAA more females are employed than males. "
+    "In these graphs, we observe the intersectionality of employment rates based on gender and disability status. Generally, men and individuals without disabilities tend to be more likely to secure jobs. Several factors contribute to this disparity. For one, women and people with disabilities often face discrimination from employers. Additionally, the number of applicants from these groups could also play a role; even though more women are entering the workforce, many continue to take on childcare responsibilities at home. Moreover, \"disability\" encompasses a wide range of conditions, making it difficult to determine which individuals are capable of working and which are not. This uncertainty likely contributes to the lower employment rates among these groups. Interestingly, it’s worth noting that for Black Americans, Native Americans, and SPAA, there are more women employed than men.In this we see intersectionality between employment based on the sex of the person or whether they have a disability. As we can see in both graphs generally male and able bodied people are more likely to be employed. Multiple factors can contribute to this desparity. One is that women and people with disabilities are discriminated against by employers. Another is also considering how many of them are applying for jobs. For women, even with more of them joining the workforce, they may be more likely to doing childcare at home. Because disabilites is such a broad it's hard which may be capable of working and those that aren't. This probably a big factor why relatively few are employed. Something I noticed is that for Black Americans, Native Americans and SPAA more females are employed than males. "
    ]
   },
   {
@@ -1188,7 +1187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this graph, we see that for people born in the U.S or it's territories have lower percentage employment than people born abroad or by naturalization. I suspect this is might be due to the smaller populations and people to who move here are more likely to have specific work purposes.   "
+    "This graph shows that individuals born in the U.S. or its territories have a lower percentage of employment compared to those born abroad or through naturalization. I suspect this may be due to the smaller population size and the fact that immigrants often come with specific job opportunities in mind.  "
    ]
   },
   {
@@ -1197,7 +1196,7 @@
    "source": [
     "### Training Model\n",
     "\n",
-    "The decision tree classifier was one of the recommedations and scikit learn said it was easy to interpret. In order to find the best depth for I used GridSearchCV which cross validated the best paramaters."
+    "The decision tree classifier was one of the recommedations given by the professor and scikit-learn said the results are easy to interpret. In order to find the best depth for the model training, I used GridSearchCV which cross validated the best parameters to use."
    ]
   },
   {
@@ -1357,7 +1356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on this the model is pretty good at predicting who's not employed but seems to overestimate the amount of employed. "
+    "Based on this the model is pretty good at predicting who's not employed but seems to overestimate the amount of people employed. "
    ]
   },
   {
@@ -1742,7 +1741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approximate error balance rate: Looking at the table dataframe above we can see that the model does not meet approximate error rate balance for groups. The groups differ in true and false positive rates. The code below double checks."
+    "Approximate error balance rate: Looking at the table above we can see that the model does not meet approximate error rate balance for groups. The groups differ in true and false positive rates. The code below double checks."
    ]
   },
   {
@@ -2019,13 +2018,13 @@
    "source": [
     "## Concluding Discussion\n",
     "\n",
-    "1. If we assume that these institutions don't already have employment data, then it could be used by finacial and government institutions. For example, a bank may use employment status prediction to determine whether to give a loan to someone. The government could use its prediction to determine where they need to improve in providing employment opportunities. Landlords could use this information to decide if they want to accept a tenant or how much they would to charge them. \n",
+    "1. If we assume that these institutions don't already have employment data, then it could be used by financial and government institutions. For example, a bank may use employment status prediction to determine whether to give a loan to someone. The government could use its prediction to determine where they need to improve in providing employment opportunities. Landlords could use this information to decide if they want to accept a tenant or how much they would charge them.\n",
     "\n",
-    "2. Since my model proved to not be fair, then commercial or government industries would be misguided in their decisions. This algorithm may be used to unreasonably target certain populations with advertisements. Some people may be missclassified which would either disallow them from certian opportunities or stop them from getting the help they need. \n",
+    "2. Since my model proved to not be fair, then commercial or government industries would be misguided in their decisions. This algorithm may be used to unreasonably target certain populations with advertisements. Some people may be misclassified, which would either disallow them from certain opportunities or stop them from getting the help they need.\n",
     "\n",
-    "3. My model failed tests of statistical parity and error rate balance which means that it does display problematic biases.\n",
+    "3. My model failed tests of statistical parity and error rate balance, which means that it does display problematic biases.\n",
     "\n",
-    "4. I think transparency might be an issue, if the algorithm is not shared to the public as people would unknownigly be judged by a algorithm.  I'm unsure if this bias but smaller populations have very weird data points that probably don't accurate reflect what's going on. I feel like there could be some social bias or judgement as result of this algorithm, especially for people who aren't employed or predicted to not be employed. "
+    "4. I think transparency might be an issue if the algorithm is not shared with the public, as people would unknowingly be judged by an algorithm. I'm unsure if this is bias, but smaller populations have very weird data points that probably don't accurately reflect what's going on. I feel like there could be some social bias or judgment as a result of this algorithm, especially for people who aren't employed or predicted to not be employed."
    ]
   }
  ],
