Updated and rendered remaining blogs

--- a/posts/audit/index.ipynb
+++ b/posts/audit/index.ipynb
@@ -2024,7 +2024,11 @@
     "\n",
     "3. My model failed tests of statistical parity and error rate balance, which means that it does display problematic biases.\n",
     "\n",
-    "4. I think transparency might be an issue if the algorithm is not shared with the public, as people would unknowingly be judged by an algorithm. I'm unsure if this is bias, but smaller populations have very weird data points that probably don't accurately reflect what's going on. I feel like there could be some social bias or judgment as a result of this algorithm, especially for people who aren't employed or predicted to not be employed."
+    "4. I think transparency might be an issue if the algorithm is not shared with the public, as people would unknowingly be judged by an algorithm. I'm unsure if this is bias, but smaller populations have very weird data points that probably don't accurately reflect what's going on. I feel like there could be some social bias or judgment as a result of this algorithm, especially for people who aren't employed or predicted to not be employed.\n",
+    "\n",
+    "## Acknowledgements\n",
+    "\n",
+    "Adapted code from Professor Phil Chodrow at Middlebury College in his class CSCI 0451: Machine Learning."
    ]
   }
  ],
