--- a/posts/descent/index.ipynb
+++ b/posts/descent/index.ipynb
@@ -94,9 +94,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 0\n",
+    "<!-- ## Part 0\n",
     "\n",
-    "If p > n, then $(X^T X)^{-1}$ is not invertible. The matrix is rank-deficient."
+    "If p > n, then $(X^T X)^{-1}$ is not invertible. The matrix is rank-deficient. -->"
    ]
   },
   {
@@ -401,7 +401,7 @@
     "\n",
     "Based on my results, 192 features achieved the lowest MSE of 301.\n",
     "\n",
-    "This blog post was my first time creating a fit function for a machine learning model. I also improved my overall graphing skills, such as adding lines to scatter plots and implementing interpolation methods. Additionally, using logarithmic scales was a new technique for me."
+    "<!-- This blog post was my first time creating a fit function for a machine learning model. I also improved my overall graphing skills, such as adding lines to scatter plots and implementing interpolation methods. Additionally, using logarithmic scales was a new technique for me. -->"
    ]
   }
  ],
