--- a/posts/kernel/index.ipynb
+++ b/posts/kernel/index.ipynb
@@ -15,7 +15,6 @@
     "date: '2025-04-29'\n",
     "description: \"Blog Post 7\"\n",
     "format: html\n",
-    "draft: true\n",
     "---"
    ]
   },
@@ -58,7 +57,7 @@
    "id": "ac1e7dd2",
    "metadata": {},
    "source": [
-    "Classification and kernel code adapted from Prof. Phil\n"
+    "Classification (cell 15) and kernel (cell 16) code adapted from Prof. Phil.\n"
    ]
   },
   {
@@ -132,14 +131,6 @@
    "source": [
     "def rbf_kernel(X_1, X_2, gamma):\n",
     "    return torch.exp(-gamma * torch.cdist(X_1, X_2) ** 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "46ec52a5",
-   "metadata": {},
-   "source": [
-    "Defined a rbf kernel machine based on Prof. Phil's code."
    ]
   },
   {
@@ -302,7 +293,7 @@
    "source": [
     "### Experiment 2: Changing gamma\n",
     "\n",
-    "This experiment is to whow that changing 𝛄 can result in wigglier descision boundaries.\n"
+    "This experiment is to show that changing 𝛄 can result in wigglier descision boundaries.\n"
    ]
   },
   {
@@ -566,7 +557,11 @@
     "- Overfitting: Training with a very high 𝛾 (1000) and low 𝜆 (1e-5) on a larger dataset (1000 points, noise = 0.8), the model achieved a near-perfect training AUC of 0.99, but the test AUC dropped to 0.72. This large gap quantitatively demonstrates overfitting: the model fits the training data extremely well but fails to generalize.\n",
     "\n",
     "\n",
-    "I spent a lot of time readjusting and making the kernel logistic regression especially with the grad function. So I would say my debugging skills with dimension/shape related errors. \n"
+    "<!-- I spent a lot of time readjusting and making the kernel logistic regression especially with the grad function. So I would say my debugging skills with dimension/shape related errors.  -->\n",
+    "\n",
+    "## Acknowledgements\n",
+    "\n",
+    "Adapted code from Professor Phil Chodrow at Middlebury College in his class CSCI 0451: Machine Learning."
    ]
   }
  ],
