--- a/posts/logistic/index.ipynb
+++ b/posts/logistic/index.ipynb
@@ -15,7 +15,6 @@
     "date: '2025-04-9'\n",
     "description: \"This blog post implements logistic regression with momentum from scratch in Python and performs three experiments evaluating the loss and accuracy.\"\n",
     "format: html\n",
-    "\n",
     "---"
    ]
   },
@@ -298,7 +297,7 @@
    "source": [
     "### Experiment 4: Performance on Empirical Data\n",
     "\n",
-    "In this experiment, I apply my logistic regression model to a real-world dataset: the Kaggle [heart disease prediction dataset](https://www.kaggle.com/datasets/shantanugarg274/heart-prediction-dataset-quantum). I preprocess the data, train the model, and evaluate its performance on training, validation, and test sets.\n"
+    "In this experiment, I apply my logistic regression model to a real-world dataset: the Kaggle [heart disease prediction dataset](https://www.kaggle.com/datasets/shantanugarg274/heart-prediction-dataset-quantum). I preprocess the data, train the model, and evaluate its performance on training, validation, and test sets."
    ]
   },
   {
