--- a/posts/optimization/index.ipynb
+++ b/posts/optimization/index.ipynb
@@ -15,7 +15,6 @@
     "date: '2025-05-07'\n",
     "description: \"Blog Post 8\"\n",
     "format: html\n",
-    "draft: true\n",
     "---"
    ]
   },
@@ -28,9 +27,9 @@
     "\n",
     "## Abstract\n",
     "\n",
-    "[Link to Newton Optimizer code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/Advanced%20Optimization/newton_logistic.py).\n",
+    "<!-- [Link to Newton Optimizer code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/Advanced%20Optimization/newton_logistic.py).\n",
     "\n",
-    "[Link to Adam Optimizer code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/Advanced%20Optimization/adam.py).\n",
+    "[Link to Adam Optimizer code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/Advanced%20Optimization/adam.py). -->\n",
     "\n",
     "In this blog post, I explore advanced optimization techniques—Newton’s Method and the Adam optimizer—in the context of logistic regression applied to heart disease prediction. Through a series of experiments on a Kaggle heart dataset, I investigate the convergence behavior, sensitivity to learning rates, and efficiency of these methods. The three optimizers I work with are Newton's method, Adam, and gradient descent. The goal is to understand how different optimization algorithms influence model performance and training dynamics in a binary classification tasks."
    ]
@@ -73,7 +72,7 @@
    "id": "8fe34a02",
    "metadata": {},
    "source": [
-    "For my external dataset, I used a [heart prediction dataset](https://www.kaggle.com/datasets/shantanugarg274/heart-prediction-dataset-quantum) from Kaggle. "
+    "In this experiment, I apply my Newton logistic regression model to a real-world dataset: the Kaggle [heart disease prediction dataset](https://www.kaggle.com/datasets/shantanugarg274/heart-prediction-dataset-quantum). I preprocess the data, train the model, and evaluate its performance on training, validation, and test sets."
    ]
   },
   {
@@ -110,7 +109,7 @@
    "id": "de4dbe55",
    "metadata": {},
    "source": [
-    "Here I found a dataset on heart disease prediction from Kaggle. The data was in 1 csv file with 7 columns representing age, gender, blood pressure, cholesterol, heart rate, quantum pattern feature, and heart disease. "
+    "The data was in 1 csv file with 7 columns representing age, gender, blood pressure, cholesterol, heart rate, quantum pattern feature, and heart disease. "
    ]
   },
   {
@@ -129,7 +128,7 @@
    "id": "98827dd6",
    "metadata": {},
    "source": [
-    "Since I intend to predict heart disease, I removed that column from the main dataset in part in the target set."
+    "Since I intend to predict heart disease, I removed that column from the main dataset and used it in the target set."
    ]
   },
   {
@@ -497,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "id": "529e615c",
    "metadata": {},
    "outputs": [
@@ -581,8 +580,12 @@
     "## Discussion\n",
     "\n",
     "The experiments show that different optimizers can perform better in different situations. Newton’s Method achieved faster convergence than standard gradient descent in terms of iteration count but when alpha became really large it was unable to converge. Gradient descent methods, while slower, offer greater stability across a wider range of learning rates. Adam strikes a balance, providing both great loss rate and rapid convergence. It was faster the mini-batch gradient descent but slower than Newton. In both situations, it had the better loss.\n",
+    "<!-- \n",
+    "In this model, I learned about the hessian but also about regulariztaion and using the damped Newton method in ordert nan. Apparently torch.linalg.inv() is numerically unstable so torch.linalg.solve() is better to use.  -->\n",
     "\n",
-    "In this model, I learned about the hessian but also about regulariztaion and using the damped Newton method in ordert nan. Apparently torch.linalg.inv() is numerically unstable so torch.linalg.solve() is better to use. "
+    "## Acknowledgements\n",
+    "\n",
+    "Adapted code from Professor Phil Chodrow at Middlebury College in his class CSCI 0451: Machine Learning."
    ]
   }
  ],
