--- a/posts/palmer/index.ipynb
+++ b/posts/palmer/index.ipynb
@@ -996,7 +996,11 @@
     "\n",
     "The model achieved a training accuracy of 0.89, which is the same as its testing accuracy. This indicates that the model is quite effective at predicting penguin species based on flipper length, body mass, and island. However, the decision regions suggest that the model had difficulty distinguishing between Chinstrap and Gentoo penguins on Dream Island. It appears that these two species have similar sizes, making them challenging to differentiate.\n",
     "\n",
-    "In this blog post, the two main things I learned were the importance of feature selection and the need to normalize data before feeding it into a model. When it came to feature selection, I explored several methods offered by Scikit-learn, including variance thresholds, statistical tests, and recursive feature elimination. I chose statistical testing because it felt more thorough than relying on variance alone, yet not as complex as recursion.I also ran into a convergence error while training a model, which led me to learn about data normalization. After some investigating, I realized the error might be due to some features not being normally distributed. I used Scikit-learn’s recommended scaling function to standardize the data, and the model was trained without any further issues. Lastly, I got more comfortable working with DataFrames—especially when it came to selecting and modifying data."
+    "<!-- In this blog post, the two main things I learned were the importance of feature selection and the need to normalize data before feeding it into a model. When it came to feature selection, I explored several methods offered by Scikit-learn, including variance thresholds, statistical tests, and recursive feature elimination. I chose statistical testing because it felt more thorough than relying on variance alone, yet not as complex as recursion.I also ran into a convergence error while training a model, which led me to learn about data normalization. After some investigating, I realized the error might be due to some features not being normally distributed. I used Scikit-learn’s recommended scaling function to standardize the data, and the model was trained without any further issues. Lastly, I got more comfortable working with DataFrames—especially when it came to selecting and modifying data. -->\n",
+    "\n",
+    "## Acknowledgements\n",
+    "\n",
+    "Adapted code from Professor Phil Chodrow at Middlebury College in his class CSCI 0451: Machine Learning."
    ]
   }
  ],
